# NebulaOS

./: PLAN.md  README.md  cubic-build.sh  logs.txt  meson.build
branding/greetd/: config.toml  gtkgreet.css
branding/grub/themes/nebula/: theme.txt
branding/plymouth/themes/nebula/: nebula.plymouth  nebula.script
calamares/branding/nebulaos/: branding.desc
calamares/branding/nebulaos/slideshow/: 01-welcome.html  02-features.html  03-configure.html  04-install.html  05-complete.html
calculator/: meson.build
calculator/src/: main.c
compositor/: meson.build
compositor/include/nebula/: animation.h  config.h  glass.h  server.h  view.h
compositor/protocol/: wlr-layer-shell-unstable-v1.xml
compositor/scripts/: gen-protocols.sh
compositor/shaders/: blur.frag  glass.frag
compositor/src/: animation.c  config.c  cursor.c  decorations.c  glass.c  input.c  layer_shell.c  main.c  output.c  server.c  server.h  view.c  workspace.c  xdg_shell.c
dconf/: default-settings.dconf
dock/: meson.build
dock/src/: dock.h  main.c
file-manager/: meson.build
file-manager/src/: file_manager.h  main.c
gdm/: gdm.css
grub/: grub-theme.txt
iso/: packages.x86_64  pacman.conf  profiledef.sh
iso-builder/: build.sh
iso-builder/archlive/: packages.x86_64  pacman.conf  profiledef.sh
iso-builder/archlive/airootfs/etc/: group  os-release
iso-builder/archlive/airootfs/etc/greetd/: config.toml  environments
iso-builder/archlive/airootfs/etc/systemd/system/getty@tty1.service.d/: autologin.conf
iso-builder/archlive/airootfs/home/liveuser/.config/sway/: config
iso-builder/archlive/grub/: grub.cfg
iso-builder/archlive/syslinux/: archiso_sys-linux.cfg  syslinux.cfg
iso/airootfs/etc/: group  gshadow  hosts  shadow
iso/airootfs/etc/systemd/network/: 20-ethernet.network
iso/airootfs/etc/systemd/resolved.conf.d/: archiso.conf
iso/airootfs/root/: customize_airootfs.sh
mission-control/: meson.build
mission-control/src/: main.c  mission_control.h
notification-daemon/: meson.build
notification-daemon/src/: main.c  notification.h
plymouth/: nebulaos.plymouth  nebulaos.script
scripts/: build-compositor.sh  build-iso.sh  generate_grub_bg.py  generate_wallpaper.py  nebula-first-boot.desktop  nebula-first-boot.sh  run-qemu.sh
settings/: meson.build
settings/src/: main.c  settings.h
shell/dock/: nebula-dock.py
shell/launcher/: nebula-launcher.py
shell/topbar/: nebula-topbar.py
terminal/: meson.build  nebula-terminal.profile
terminal/src/: main.c  terminal.h
text-editor/: meson.build
text-editor/src/: editor.h  main.c
theme/gtk4/: gtk.css
themes/gtk4/css/: gtk-dark.css  gtk.css
themes/nebula-gtk/: index.theme
themes/nebula-gtk/gnome-shell/: gnome-shell-high-color.css  gnome-shell.css  metadata.json
themes/nebula-gtk/gtk-3.0/: gtk.css
themes/nebula-gtk/gtk-4.0/: gtk.css
topbar/: meson.build
topbar/src/: main.c  topbar.h
